# fiscal-mk

detalica-gateway/: README.md  fake_commands.py  printer_client.py  pyproject.toml  requirements.txt
local_printer/: printer_client.py  verify.py
web_service/: package-lock.json  package.json  server.js
