[project]
name = "detalica-gateway"
version = "0.1.0"
description = ""
authors = [
    {name = "Vangel22",email = "h.vangel22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.14"
dependencies = [
    "pywin32 (>=310,<311)",
    "requests (>=2.32.3,<3.0.0)",
    "pyinstaller (>=6.12.0,<7.0.0)"
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
